--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,21 @@
     package="com.hxqydyl.app.ys">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
+        android:name=".common.AppContext"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".activity.SplashActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,7 +44,8 @@
         <activity android:name=".activity.register.GoodChoiceActivity" />
         <activity android:name=".activity.register.EvpiPhotoActivity" />
         <activity android:name=".activity.register.EvpiAddressActivity" />
-        <activity android:name=".activity.register.EvpiUserActivity"></activity>
+        <activity android:name=".activity.register.EvpiUserActivity" />
+        <activity android:name=".activity.BaseTitleActivity"></activity>
     </application>
 
 </manifest>
