--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,17 +36,15 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity
-            android:name=".activity.register.RegisterActivity"
-            android:screenOrientation="portrait" />
-        <activity android:name=".activity.ForgetPasswordActivity" />
-        <activity android:name=".activity.register.RegisterOrderActivity" />
-        <activity android:name=".activity.register.GoodChoiceActivity" />
-        <activity android:name=".activity.register.EvpiPhotoActivity" />
-        <activity android:name=".activity.register.EvpiAddressActivity" />
-        <activity android:name=".activity.register.EvpiUserActivity" />
-        <activity android:name=".activity.BaseTitleActivity" />
-        <activity android:name=".activity.reading.ReadingActivity"></activity>
+        <activity android:name=".activity.register.RegisterActivity" android:screenOrientation="portrait" />
+        <activity android:name=".activity.ForgetPasswordActivity" android:screenOrientation="portrait" />
+        <activity android:name=".activity.register.RegisterOrderActivity" android:screenOrientation="portrait" />
+        <activity android:name=".activity.register.GoodChoiceActivity" android:screenOrientation="portrait" />
+        <activity android:name=".activity.register.EvpiPhotoActivity" android:screenOrientation="portrait" />
+        <activity android:name=".activity.register.EvpiAddressActivity" android:screenOrientation="portrait" />
+        <activity android:name=".activity.register.EvpiUserActivity" android:screenOrientation="portrait" />
+        <activity android:name=".activity.BaseTitleActivity" android:screenOrientation="portrait" />
+        <activity android:name=".activity.reading.ReadingActivity" android:screenOrientation="portrait" ></activity>
     </application>
 
 </manifest>
