--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile project(':library')
     compile 'com.google.android.gms:play-services-ads:8.4.0'
+    compile 'org.apache.httpcomponents:httpcore:4.4.4'
 }
