--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile project(':library')
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.6.2'
@@ -29,7 +30,7 @@ dependencies {
     compile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta1'
     compile 'com.alibaba:fastjson:1.2.8'
     compile 'com.squareup.okhttp:okhttp:2.7.5'
-    compile project(':library')
     compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'org.apache.httpcomponents:httpcore:4.4.4'
+    compile 'cn.pedant.sweetalert:library:1.3'
 }
