--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
             android:name=".activity.reading.ReadingActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".activity.video.VideoActivity" />
-        <activity android:name=".activity.follow.PatientInfoActivity" />
+        <activity android:name=".activity.patient.PatientInfoActivity" />
         <activity android:name=".activity.follow.ArticleActivity" />
         <activity android:name=".activity.follow.FollowGroupsMgrActivity" />
         <activity android:name=".activity.follow.ChoiceUserActivity" />
@@ -82,7 +82,8 @@
         <activity android:name=".activity.follow.FollowMainActivity" />
         <activity android:name=".activity.follow.FollowApplyActivity" />
         <activity android:name=".activity.follow.PlanMgrActivity" />
-        <activity android:name=".activity.patient_group.PatientGroupManageActivity"></activity>
+        <activity android:name=".activity.patient_group.PatientGroupManageActivity"/>
+        <activity android:name=".activity.patient.PatientDetailsActivity" />
     </application>
 
 </manifest>
