--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'org.apache.httpcomponents:httpcore:4.4.4'
     compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.belerweb:pinyin4j:2.5.1'
 }
