--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,13 +23,12 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile project(':library')
-    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.haha:haha:2.0.2'
     compile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta1'
     compile 'com.alibaba:fastjson:1.2.8'
-    compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'org.apache.httpcomponents:httpcore:4.4.4'
     compile 'cn.pedant.sweetalert:library:1.3'
@@ -37,4 +36,5 @@ dependencies {
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.2.6@aar'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.squareup.okhttp:okhttp:2.7.5'
 }
