--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <uses-permission-sdk-23 android:name="android.permission.READ_CONTACTS" />
 
     <application
@@ -28,7 +29,8 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -85,24 +87,32 @@
         <activity android:name=".activity.follow.FollowApplyDetailActivity" />
         <activity android:name=".activity.follow.FollowApplyOkActivity" />
         <activity android:name=".activity.follow.PlanMgrActivity" />
-        <activity android:name=".activity.patient_group.PatientGroupManageActivity"/>
-
-        <activity android:name=".activity.patient.PatientAddActivity"
+        <activity android:name=".activity.patient_group.PatientGroupManageActivity" />
+        <activity
+            android:name=".activity.patient.PatientAddActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.patient.AddressBookSelectActivity"
+        <activity
+            android:name=".activity.patient.AddressBookSelectActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.patient.PatientDetailsActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.follow.PlanEditActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.case_report.InPatientCaseReportActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.case_report.OutPatientCaseReportActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.case_report.AddCaseReportActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".activity.case_report.FollowUpFormActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.patient.PatientDetailsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.follow.PlanEditActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.case_report.InPatientCaseReportActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.case_report.OutPatientCaseReportActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.case_report.AddCaseReportActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.case_report.FollowUpFormActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.clinic.ClinicActivity"></activity>
     </application>
 
 </manifest>
