--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,7 +111,9 @@
         <activity
             android:name=".activity.case_report.FollowUpFormActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.clinic.ClinicActivity"></activity>
+        <activity android:name=".activity.clinic.ClinicActivity" />
+        <activity android:name=".activity.follow.ArticleDetailActivity" />
+        <activity android:name=".activity.follow.PatientSelectActivity"></activity>
     </application>
 
 </manifest>
