随访UI的调整，API接口实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,6 +104,12 @@
             android:name=".activity.patient.PatientDetailsActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".activity.follow.PlanPatientListActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.follow.PlanInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activity.follow.PlanEditActivity"
             android:windowSoftInputMode="stateHidden"
             android:screenOrientation="portrait" />
