--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,10 +104,17 @@
             android:name=".activity.patient.PatientDetailsActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".activity.patient.PatientAdviceInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activity.follow.PlanPatientListActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.follow.PlanInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.follow.PatientAdviceEditActivity"
+            android:windowSoftInputMode="stateHidden"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.follow.PlanEditActivity"
