--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.hxqydyl.app.ys">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -19,9 +20,10 @@
     <application
         android:name=".common.AppContext"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        tools:replace="android:icon, android:theme"
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.SplashActivity"
