修改借口框架 暂不合并

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -161,6 +161,10 @@
             android:theme="@style/AppBaseThemeLib"
             android:screenOrientation="portrait"
             ></activity>
+        <activity
+            android:name=".activity.BigPicActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
