--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,9 @@
             android:name=".activity.CommentWebActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".activity.reading.VitamioPlayerActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
             android:name=".activity.register.RegisterActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
@@ -161,6 +164,10 @@
             android:theme="@style/AppBaseThemeLib"
             android:screenOrientation="portrait"
             ></activity>
+        <activity
+            android:name=".activity.BigPicActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
