--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.zhy:okhttputils:2.3.8'
 
+    /*视频*/
+    compile 'fm.jiecao:jiecaovideoplayer:3.0_preview'
+
     /*首页轮播图用到的*/
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.slider:library:1.1.5@aar'
