--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+        ceshi { manifestPlaceholders = [HOST: "http://172.168.1.46:8080", IS_TEST: true] }
+        zs { manifestPlaceholders = [HOST: "http://admin.hxqydyl.com", IS_TEST: false] }
+//        ceshi{[HOST: "http://172.168.1.53",IS_TEST:true]}
+    }
+
+
 }
 
 dependencies {
@@ -25,17 +33,16 @@ dependencies {
     compile project(':library')
 
     /*视频*/
-    
 
     /*首页轮播图用到的*/
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support:appcompat-v7:23.3.0'
-    compile  'com.squareup.picasso:picasso:2.5.2'
-    compile  'com.google.code.gson:gson:2.6.2'
-    compile  'com.squareup.haha:haha:2.0.2'
-    compile  'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.haha:haha:2.0.2'
+    compile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta1'
     compile 'com.alibaba:fastjson:1.2.8'
-    compile 'com.google.android.gms:play-services-ads:8.4.0'
+//    compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'org.apache.httpcomponents:httpcore:4.4.4'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.belerweb:pinyin4j:2.5.1'
