--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '24.0.0 rc4'
 
     defaultConfig {
         applicationId "com.hxqydyl.app.ys"
@@ -23,8 +23,8 @@ android {
 //   ceshi{manifestPlaceholders = [HOST: "http://172.168.1.22", IS_TEST: true,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"cs",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"]}//刘阳
 //     ceshi{manifestPlaceholders = [HOST: "http://172.168.1.16", IS_TEST: true,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"cs",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"]}//苏日娜
 //        ceshi{manifestPlaceholders = [HOST: "http://172.168.1.57", IS_TEST: true,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"cs",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"]}//请金玉
-        ceshi { manifestPlaceholders = [HOST: "http://172.168.1.46:8080", IS_TEST: true,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"cs",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"] }//测试环境
-//        zs { manifestPlaceholders = [HOST: "http://admin.hxqydyl.com", IS_TEST: false,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"hxq",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"] }
+//        ceshi { manifestPlaceholders = [HOST: "http://172.168.1.46:8080", IS_TEST: true,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"cs",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"] }//测试环境
+        zs { manifestPlaceholders = [HOST: "http://admin.hxqydyl.com", IS_TEST: false,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"hxq",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"] }
     }
 }
 
@@ -43,7 +43,6 @@ dependencies {
     compile 'com.squareup.haha:haha:2.0.2'
     compile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta1'
     compile 'com.alibaba:fastjson:1.2.8'
-    //    compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'org.apache.httpcomponents:httpcore:4.4.4'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.belerweb:pinyin4j:2.5.1'
