--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '24.0.0 rc4'
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.hxqydyl.app.ys"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 20160511
-        versionName "2.3"
+        versionCode 20160531
+        versionName "2.4.1"
     }
     buildTypes {
         release {
@@ -23,8 +23,10 @@ android {
 //   ceshi{manifestPlaceholders = [HOST: "http://172.168.1.22", IS_TEST: true,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"cs",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"]}//刘阳
 //     ceshi{manifestPlaceholders = [HOST: "http://172.168.1.16", IS_TEST: true,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"cs",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"]}//苏日娜
 //        ceshi{manifestPlaceholders = [HOST: "http://172.168.1.57", IS_TEST: true,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"cs",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"]}//请金玉
-        ceshi { manifestPlaceholders = [HOST: "http://172.168.1.46:8080", IS_TEST: true,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"cs",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"] }//测试环境
-//        zs { manifestPlaceholders = [HOST: "http://admin.hxqydyl.com", IS_TEST: false,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"hxq",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"] }
+        ceshi {
+            manifestPlaceholders = [HOST: "http://172.168.1.46:8080", IS_TEST: false, UMENG_APPKEY: "565eb06267e58e0943002225", UMENG_CHANNEL: "cs", JPUSH_APPKEY: "6bda069a6d817d1f567a86ed"]
+        }//测试环境
+        zs { manifestPlaceholders = [HOST: "http://admin.hxqydyl.com", IS_TEST: false,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"hxq",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"] }
     }
 }
 
@@ -34,10 +36,11 @@ dependencies {
     compile project(':library')
     /*视频*/
     /*首页轮播图用到的*/
+    compile 'com.nineoldandroids:library:2.4.0'
+    //    compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'com.umeng.analytics:analytics:latest.integration'
     compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.haha:haha:2.0.2'
@@ -49,7 +52,8 @@ dependencies {
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.2.6@aar'
     compile 'com.zhy:okhttputils:2.3.8'
-    compile 'fm.jiecao:jiecaovideoplayer:3.0_preview'
+    compile 'fm.jiecao:jiecaovideoplayer:3.3'
     compile 'com.daimajia.slider:library:1.1.5@aar'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:support-v4:23.4.0'
 }
