--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,12 @@ android {
 //     ceshi{manifestPlaceholders = [HOST: "http://172.168.1.16", IS_TEST: true,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"cs",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"]}//苏日娜
 //        ceshi{manifestPlaceholders = [HOST: "http://172.168.1.57", IS_TEST: true,UMENG_APPKEY:"565eb06267e58e0943002225",UMENG_CHANNEL:"cs",JPUSH_APPKEY:"6bda069a6d817d1f567a86ed"]}//请金玉
         ceshi {
+
             manifestPlaceholders = [HOST: "http://172.168.1.46:8080", IS_TEST: false, UMENG_APPKEY: "565eb06267e58e0943002225", UMENG_CHANNEL: "cs", JPUSH_APPKEY: "6bda069a6d817d1f567a86ed"]
         }//测试环境
-        zs {
-            manifestPlaceholders = [HOST: "http://admin.hxqydyl.com", IS_TEST: false, UMENG_APPKEY: "565eb06267e58e0943002225", UMENG_CHANNEL: "hxq", JPUSH_APPKEY: "6bda069a6d817d1f567a86ed"]
-        }
+//        zs {
+//            manifestPlaceholders = [HOST: "http://admin.hxqydyl.com", IS_TEST: false, UMENG_APPKEY: "565eb06267e58e0943002225", UMENG_CHANNEL: "hxq", JPUSH_APPKEY: "6bda069a6d817d1f567a86ed"]
+//        }
     }
     //修改生成的apk名字
     applicationVariants.all { variant ->
